finally added strategy

--- a/strategy/cached.tex
+++ b/strategy/cached.tex
@@ -11,15 +11,20 @@
 \end{frame}
 
 
-\begin{frame}[standout]
-    Wer hält Strategie für wichtig?
-    % punkt: strategie ist wirklich wichtig, auch für das alltägliche planungen
-\end{frame}
+% Slide about Belief Chains ?
 
-\begin{frame}[standout]
-    \LARGE
+% \begin{frame}[c]{Belief Chains}
+%     \Large
+%     Belief Chains sind viele Hierarchisch zusammenhängende Chached Thoughts.
+% \end{frame}
+
+
+
+\begin{frame}[c]{Strategie - Wichtig?}
+    \Large
+    Wer hält Strategie für wichtig? \\ \pause
     Wer hat sich bereits ernsthaft damit auseinandergesetzt?
+    % punkt: strategie ist wirklich wichtig, auch für das alltägliche Planungen
 \end{frame}
-
 
 
