--- a/strategy/cites.tex
+++ b/strategy/cites.tex
@@ -29,27 +29,29 @@
             \newblock {\em say No so you can say YES}
             \newblock \url{https://zenhabits.net/say-yes/}
 
+    \bibitem{Wikiquote}
+        Fukuzawa Yukichi
+            \newblock {\em Wikiquote}
+            \newblock \url{https://en.wikiquote.org/wiki/Fukuzawa\_Yukichi}
 
     \bibitem{SpaceX}
         SpaceX
             \newblock {\em SpaceX}
             \newblock \url{http://www.spacex.com/}
 
-    \bibitem{Wihipedia}
-        Wikipedia
-            \newblock {\em Proton-M}
-            \newblock \url{https://en.wikipedia.org/wiki/Proton-M}
-    \bibitem{Wikipedia}
-        Wikipedia
-            \newblock {\em Ariane 5}
-            \newblock \url{https://en.wikipedia.org/wiki/Ariane\_5}
-    \bibitem{Wikipedia}
-        Wikipedia
-            \newblock {\em Delta IV Heavy}
-            \newblock \url{https://en.wikipedia.org/wiki/Delta\_IV}
+%    \bibitem{Wihipedia}
+%        Wikipedia
+%            \newblock {\em Proton-M}
+%            \newblock \url{https://en.wikipedia.org/wiki/Proton-M}
+%    \bibitem{Wikipedia}
+%        Wikipedia
+%            \newblock {\em Ariane 5}
+%            \newblock \url{https://en.wikipedia.org/wiki/Ariane\_5}
+%    \bibitem{Wikipedia}
+%        Wikipedia
+%            \newblock {\em Delta IV Heavy}
+%            \newblock \url{https://en.wikipedia.org/wiki/Delta\_IV}
     \end{thebibliography}
     % required the allowframebreaks for longer lists
 
 \end{frame}
-
-
