--- a/strategy/präsens.tex
+++ b/strategy/präsens.tex
@@ -14,7 +14,7 @@
 \titlegraphic{\hspace{9cm} \includegraphics[height=2cm]{template/Logo-Uni-Freiburg.png}}
 \graphicspath{ {./template/} {./strategy/} }
 
-\title{Cached Thought: Strategie}
+\title{Strategie}
 \author{Felix Karg}
 \subject{Mathecamp}
 
@@ -80,22 +80,37 @@
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%BEGINNING%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-% \input{begin.tex} % PROGRESS
+\input{begin.tex} % PROGRESS
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%CACHED THOUGHTS%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-% \input{cached.tex} % DONE
+\input{cached.tex} % DONE
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%NICHT-STRATEGIE%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%ANALYSIS%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-% \input{analysis.tex} % IN PROGRESS
+% not as important.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%ECHTE STRATEGIE%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-% \input{real_kernel.tex} % DONE
-% \input{sources_of_power.tex} % IN PROGRESS
-% \input{design.tex} % TODO
-\input{focus.tex} % TODO
-% \input{using_advantage.tex} % TODO
+\input{real_kernel.tex}   % DONE
+\input{sources_of_power.tex}  % IN PROGRESS
+\input{design.tex}    % IN PROGRESS
+\input{focus.tex}   % IN PROGRESS
+% \input{equality.tex} % IN PROGRESS % can not be shown .
+\input{using_advantage.tex}   % IN PROGRESS
+\input{dynamics.tex} % IN PROGRESS
+\input{entropy.tex} % TODO
+\input{nvidia.tex} % TODO
+
+
+
+% * Thinking about thinking
+% * Tools
+% * Motivated stopping
+% * Relationship of Strategy and Science
+% * Relationship of Strategy and Rationality
+% * Terminologies of Rationality
+% * a few more things Rationality says (Occam's Razor?)
+
+
+\input{final_example.tex} % TODO
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%BEISPIELE FÜR GUTE STRATEGIE%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % \input{examples_good.tex} % IN PROGRESS - Required even ?
