--- a/strategy/real_kernel.tex
+++ b/strategy/real_kernel.tex
@@ -13,7 +13,7 @@
 
 
 \begin{frame}[c]{Kernel - was ist das}
-    \large
+    \Large
     Jede gute Strategie hat eine gemeinsame zugrundeliegende Struktur
 \end{frame}
 
@@ -34,6 +34,7 @@
 
 
 \begin{frame}[c]{Kernel - unerwähnt}
+    \Large
     \begin{itemize}
         \item Visionen
         \item Hierarchien
@@ -42,7 +43,8 @@
         \item Zeitspannen
             \pause
         \item Reichweite
-        \item Ideen zur Veränderung
+        \item weiteres ...
+%        \item Ideen zur Veränderung
     \end{itemize}
     % Explizit unerwähnt, da nicht teil der Grundstruktur
 \end{frame}
@@ -94,12 +96,22 @@
 \end{frame}
 
 
-\begin{frame}[c]{Diagnose - Beispiel}
-    IBM, 1993, es ging Bergab. \\
-    Diagnose: Zu groß. \\ \pause
-    Neue Diagnose: Zu wenig vernetzt.
-\end{frame}
+%
+% \begin{frame}[c]{Diagnose - Beispiel}
+%     \Large
+%     Situation: IBM, 1993, es ging Bergab. \\
+%     Diagnose: Zu groß. \\ \pause
+%     Neue Diagnose: Zu wenig vernetzt.
+%     % TODO: different example
+% \end{frame}
+%
 
+\begin{frame}[c]{Diagnose - Beispiel}
+    \Large
+    Situation: Mann liegt am Straßenrand
+    % Correspondence Bias
+    % TODO: look it up again
+\end{frame}
 
 \subsection{Leitidee}
 
@@ -112,7 +124,18 @@
 
 \begin{frame}[c]{Leitidee - Beispiel}
     \Large
-    Kleiner Eckladen
+    Situation: Kleiner Eckladen
+    % A lot of questions:
+    % * More chepaer stuff or more organic stuff?
+    % * stock for asian students?
+    % * open longer?
+    % * more friendly staff?
+    % * open longer?
+    % * second check-out booth?
+    % * parking in the alley?
+    % * Paint ceiling white or green?
+    % * advertising? what?
+    % * what else?
 \end{frame}
 
 
@@ -132,7 +155,7 @@
 \end{frame}
 
 
-\begin{frame}[c]{Zusammenhängende Aktionen}
+\begin{frame}[c]{Menge Zusammenhängender Aktionen}
     \Huge
     Koordinierte Aktionen
 \end{frame}
@@ -144,6 +167,7 @@
 \begin{frame}[c]{Kernel}
     \Large
     \begin{itemize}
+            \pause
         \item Diagnose
             \pause
         \item Eine Leitende Idee
@@ -156,8 +180,8 @@
 \end{frame}
 
 
-\begin{frame}{Kernel - Fazit}
-    \large
+\begin{frame}[c]{Kernel - Fazit}
+    \Large
     Sehr wichtige Grundbausteine, \\
     Sehr vieles wird schiefgehen sollten diese nicht vorhanden sein.
 \end{frame}
