--- a/strategy/design.tex
+++ b/strategy/design.tex
@@ -15,6 +15,12 @@
 \end{frame}
 
 
+\begin{frame}[c]{Schlacht von Cannae}
+    \includegraphics[height=4cm]{strategy/Initial_Roman_attack.png}
+    \pause
+    \includegraphics[height=4cm]{strategy/Battle_cannae_destruction.png}
+\end{frame}
+
 \begin{frame}[c]{Design - Eigenschaften}
     \large
     \begin{itemize}
@@ -44,40 +50,32 @@
 \end{frame}
 
 
-\begin{frame}[c]{Design - Realität}
-    \large
-    What is true is already so. \\
-    Owning up to it doesn't make it worse. \\ \pause
-    Not being open about it doesn't make it go away. \\ \pause
-    And because it's true, \\
-    it is what is there to be interacted with. \\ \pause
-    Anything untrue isn't there to be lived. \\ \pause
-    People can stand what is true, \\
-    for they are already enduring it.
+% \begin{frame}[c]{Design - Realität}
+%     \large
+%     What is true is already so. \\
+%     Owning up to it doesn't make it worse. \\ \pause
+%     Not being open about it doesn't make it go away. \\ \pause
+%     And because it's true, \\
+%     it is what is there to be interacted with. \\ \pause
+%     Anything untrue isn't there to be lived. \\ \pause
+%     People can stand what is true, \\
+%     for they are already enduring it.
+% \end{frame}
+% 
+% \begin{frame}[c]{Design - Realität}
+%     \large
+%     Was wahr ist ist es bereits. \\
+%     Das zu akzeptieren macht es nicht schlimmer. \\
+%     Es nicht zuzugeben lässt es nicht verschwinden. \\
+%     Und weil es Wahr ist, \\
+%     ist es das was da ist um damit zu Interagieren. \\
+%     Alles unwahre ist nicht in der lage gelebt zu werden. \\
+%     Alle Menschen können die Wahrheit aushalten, \\
+%     ertragen müssen sie sie bereits.
+% \end{frame}
+% 
+
+\begin{frame}[c]{Design - Finden}
+    \Large
+    Strategie lernen ... 
 \end{frame}
-
-\begin{frame}[c]
-    \large
-    Was wahr ist ist es bereits. \\
-    Das zu akzeptieren macht es nicht schlimmer. \\
-    Es nicht zuzugeben lässt es nicht verschwinden. \\
-    Und weil es Wahr ist, \\
-    ist es das was da ist um damit zu Interagieren. \\
-    Alles unwahre ist nicht in der lage gelebt zu werden. \\
-    Alle Menschen können die Wahrheit aushalten, \\
-    ertragen müssen sie sie bereits.
-\end{frame}
-
-
-
-
-
-
-
-
-
-
-
-
-
-
