--- a/proseminar/wellorder.tex
+++ b/proseminar/wellorder.tex
@@ -3,7 +3,7 @@
 
 \begin{frame}[c]{Wohlordnungen}
     \Large
-    Eine Wohlordnung ist eine total fundierte Ordnungsrelation.
+    Eine Wohlordnung ist eine fundiert totale Ordnungsrelation.
     \newline
     \bigskip
     \pause
