made some pictures

--- a/lesswrong/introduction.tex
+++ b/lesswrong/introduction.tex
@@ -67,7 +67,7 @@
 \end{frame}
 
 
-\begin{frame}[c]{Kognitive Vorurteile}
+\begin{frame}[c]{Kognitive Vorurteile - Erklärung}
     \pause
     Beispiel: Ich bin unbeliebt. \newline
     % erzählen: man sieht die welt so wie man sie sehen möchte, sucht
@@ -77,9 +77,61 @@
 \end{frame}
 
 
-\begin{frame}[c]{Kognitive Vorurteile}
+% \begin{frame}[c]{Kognitive Vorurteile - Wie viele gibt es}
+%     \centering
+%     % trim = l b r t
+%     \includegraphics[width=\textwidth, clip=true, trim = 300mm 370mm 300mm 370mm]{cogbias}
+% \end{frame}
+
+
+\begin{frame}[c]{Liste der Kognitiven Vorurteile}
+    \centering
+    \includegraphics[width=\textwidth]{cogbias_0}
+\end{frame}
+
+\begin{frame}[c]{Kognitive Vorurteile - Wie viele gibt es II}
+    \centering
+    \includegraphics[width=0.9\textwidth, clip=true]{cogbias}
+\end{frame}
+
+\begin{frame}[c]{Kognitive Vorurteile - Was soll man sich merken?}
+    \centering
+    % trim = l b r t
+    % Tip of the Tongue, Google effekt
+    % \includegraphics[width=\textwidth, clip=true, trim = 600mm 1450mm 900mm 5mm]{cogbias}
+    \includegraphics[width=\textwidth]{cogbias_1}
+\end{frame}
+
+\begin{frame}[c]{Kognitive Vorurteile - Schnelle Reaktionen}
+    \centering
+    % trim = l b r t
+    % Optimism Bias, Dunning-Kruger
+    % \includegraphics[width=\textwidth, clip=true, trim = 900mm 100mm 600mm 1350mm ]{cogbias}
+    \includegraphics[width=\textwidth]{cogbias_2}
+\end{frame}
+
+\begin{frame}[c]{Kognitive Vorurteile - Zu wenig Bedeutung}
+    \centering
+    \includegraphics[width=\textwidth]{cogbias_3}
+\end{frame}
+
+\begin{frame}[c]{Kognitive Vorurteile - Zu wenig Bedeutung II}
+    \centering
+    \includegraphics[width=\textwidth]{cogbias_4}
+\end{frame}
+
+
+% Rheinfolge der Bias-Gruppen:
+% Angefangen mit Tip of the Tongue, Google effekt (mitte oben)
+% Dann: Optimism Bias, Dunning-Kruger (mitte unten)
+% Dann: Self-Serving Bias (links unten)
+% Dann: Illusion of Transparency, Curse of Knowledge (unten mitte rechts)
+
+
+
+\begin{frame}[c]{Kognitive Vorurteile - Zusammenfassung}
     \begin{itemize}
-        \pause
+%        \pause
         \item Verzerren Überzeugungen
         \pause
         \item Verzerren Entscheidungsprozesse
