--- a/lesswrong/main.tex
+++ b/lesswrong/main.tex
@@ -79,10 +79,11 @@
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%BEGINNING%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \input{introduction.tex}
-\input{predictably_wrong.tex}
+% \input{predictably_wrong.tex}
 
 % \input{occam.tex}
 
+% \input{test.tex}
 
 
 %%%%%%%%%% END %%%%%%%%%%
