--- a/lesswrong/predictably_wrong.tex
+++ b/lesswrong/predictably_wrong.tex
@@ -11,13 +11,19 @@
 \else
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
+
 \section{Vorhersagbar Falsch}
+
 
 \begin{frame}[c]{Unwahrscheinliche Details}
     
 \end{frame}
 
 
+
+\begin{frame}[c]{Planning Fallacy}
+    
+\end{frame}
 
 
 
