more or less finished zsm presentation (holding it)

--- a/zsm/main.tex
+++ b/zsm/main.tex
@@ -17,7 +17,7 @@
 \graphicspath{ {./template/} {./zsm/} }
 
 \title{Selbstmanagement-Kompetenz in Unternehmen nachhaltig sichern}
-\author{Janika, Maika, Charlotte, Felix}
+\author{Janika, Maike, Charlotte, Felix}
 
 \newif\ifonline
 \onlinefalse
