--- a/zsm/begin.tex
+++ b/zsm/begin.tex
@@ -126,13 +126,11 @@
 
 \begin{frame}[c]{Zeitmanagement}
     \begin{itemize}
-    \item Zeit bewusst und zielorientiert einteilen
+    \item Zeit bewusst und zielorientiert einteilen \newline
     \pause
-    \item Erholung gezielt in den Zeitplan integrieren
+    \item Erholung gezielt in den Zeitplan integrieren \newline
     \pause
     \item Zeitdiebe Elimieren
-    \pause
-    \item Differenzieren zwischen nützlichen und hinderlichen Aktivitäten
     \end{itemize}
 \end{frame}
 
@@ -142,9 +140,9 @@
 
 \begin{frame}[c]{Gesundheit}
     \begin{itemize}
-    \item Bewusstsein für die Wichtigkeit des eigenen Physischen und Psychischen Zustands entwickeln
+    \item Bewusstsein für die Wichtigkeit des eigenen Physischen und Psychischen Zustands entwickeln \newline
     \pause
-    \item Balance auf Körperlicher Ebene: \pause Schlaf\pause, Gesunde ernährung\pause, Erholung\pause, Bewegung
+    \item Balance auf Körperlicher Ebene: \pause Schlaf\pause, Gesunde ernährung\pause, Erholung\pause, Bewegung \newline
     \pause
     \item Balance auf Emotionaler Ebene: \pause Emotionsmanagement\pause, Erregungskontrolle
     \end{itemize}
@@ -154,21 +152,42 @@
 
 \section{Soziale Beziehungen}
 
-\begin{frame}[c]
-    
+\begin{frame}[c]{Soziale Beziehungen}
+    \begin{itemize}
+    \item Gleichwertige Beziehungen suchen \newline
+    \pause
+    \item Helfende Beziehungen pflegen \newline
+    \pause
+    \item Abgrenzen von Destruktiven Einflüssen
+    \end{itemize}
 \end{frame}
 
 
 
 \section{Selbstkontrolle und Selbstrugalation}
 
-
+\begin{frame}[c]{Selbstkontrolle}
+    \begin{itemize}
+    \item Verhalten auf Ziele ausrichten \newline
+    \pause
+    \item Sich über Wirkung der Emotionen auf eigenes handeln bewusst sein \newline
+    \pause
+    \item Misserfolge nicht als persönliche Niederlage sehen
+    \end{itemize}
+\end{frame}
 
 
 \section{Relevante Aspekte der Persönlichkeit}
 
-
-
+\begin{frame}[c]{Persönlichkeitsentwicklung}
+    \begin{itemize}
+    \item Sich über den Langfristigen Prozess von Persönlichkeitsentwicklung bewusst sein \newline
+    \pause
+    \item Im Umfeld unterstützung für persönlichen Entwicklungsprozess suchen \newline
+    \pause
+    \item Sich eigener Haltung und Muster bewusst sein
+    \end{itemize}
+\end{frame}
 
 
 
