Fixed a few typos

--- a/zsm/begin.tex
+++ b/zsm/begin.tex
@@ -23,15 +23,15 @@
     \begin{itemize}
     \item Was ist mir im Leben am wichtigsten? \newline
     \pause
-    \item Wirkt sich Fremdbestimmung Negativ auf mein Wohlbefinden aus? \newline
+    \item Wirkt sich Fremdbestimmung negativ auf mein Wohlbefinden aus? \newline
     \pause
-    \item Überneheme ich genug Verantwortung für mein Wohlbefinden?
+    \item Übernehme ich genug Verantwortung für mein Wohlbefinden?
     \end{itemize}
 \end{frame}
 
 
 \begin{frame}[standout]
-    Was Wünsche ich mir für meine Zukunft?
+    Was wünsche ich mir für meine Zukunft?
 \end{frame}
 
 
@@ -57,13 +57,14 @@
     \pause
     \item Was kann ich gut? \newline
     \pause
-    \item Welche Einstellungen und Verhaltensmuster Prägen mich?
+    \item Welche Einstellungen und Verhaltensmuster prägen mich?
     \end{itemize}
 \end{frame}
 
 
-\begin{frame}[c]{Selbsterkenntnis - Übung}
-    
+\begin{frame}[standout]
+    \huge
+    Tagesreflektion
 \end{frame}
 
 
@@ -74,9 +75,9 @@
 
 \begin{frame}[c]{Selbstentwicklung - Verhaltensindikatoren}
     \begin{itemize}
-    \item Weiterentwicklung der Persönlichkeit mit dem verlauf des Lebens
+    \item Weiterentwicklung der Persönlichkeit mit dem Verlauf des Lebens
     \pause
-    \item Klares hinarbeiten auf eigen Ziele
+    \item Klares Hinarbeiten auf eigene Ziele
     \pause
     \item Offenheit neuen Erfahrungen gegenüber erhalten
     \pause
@@ -87,7 +88,7 @@
 
 \begin{frame}[c]{Selbstentwicklung - Reflektionsfragen}
     \begin{itemize}
-    \item Was will ich im Leben noch Erfahren/Lernen/Wissen? \newline
+    \item Was will ich im Leben noch erfahren/lernen/wissen? \newline
     \pause
     \item Wo schränke ich mich in meinen Möglichkeiten selbst ein? \newline
     \pause
@@ -96,8 +97,8 @@
 \end{frame}
 
 
-\begin{frame}[c]{Selbstentwicklung - Übung}
-    
+\begin{frame}[standout]
+    Übung
 \end{frame}
 
 
@@ -108,7 +109,7 @@
 
 \begin{frame}[c]{Ziele - Anwendung}
     \begin{itemize}
-    \item Persönliche Ziele Definieren und Analysieren\pause Wichtig: Realisierbarkeit
+    \item Persönliche Ziele definieren und analysieren \pause Wichtig: Realisierbarkeit
     \pause
     \item Zielkonflikte erkennen und behandeln
     \pause
@@ -130,7 +131,7 @@
     \pause
     \item Erholung gezielt in den Zeitplan integrieren \newline
     \pause
-    \item Zeitdiebe Elimieren
+    \item Zeitdiebe elimieren
     \end{itemize}
 \end{frame}
 
@@ -140,11 +141,11 @@
 
 \begin{frame}[c]{Gesundheit}
     \begin{itemize}
-    \item Bewusstsein für die Wichtigkeit des eigenen Physischen und Psychischen Zustands entwickeln \newline
+    \item Bewusstsein für die Wichtigkeit des eigenen physischen und psychischen Zustands entwickeln \newline
     \pause
-    \item Balance auf Körperlicher Ebene: \pause Schlaf\pause, Gesunde ernährung\pause, Erholung\pause, Bewegung \newline
+    \item Balance auf körperlicher Ebene: \pause Schlaf\pause, gesunde Ernährung\pause, Erholung\pause, Bewegung \newline
     \pause
-    \item Balance auf Emotionaler Ebene: \pause Emotionsmanagement\pause, Erregungskontrolle
+    \item Balance auf emotionaler Ebene: \pause Emotionsmanagement\pause, Erregungskontrolle
     \end{itemize}
 \end{frame}
 
@@ -158,19 +159,19 @@
     \pause
     \item Helfende Beziehungen pflegen \newline
     \pause
-    \item Abgrenzen von Destruktiven Einflüssen
+    \item Abgrenzen von destruktiven Einflüssen
     \end{itemize}
 \end{frame}
 
 
 
-\section{Selbstkontrolle und Selbstrugalation}
+\section{Selbstkontrolle und Selbstregulation}
 
 \begin{frame}[c]{Selbstkontrolle}
     \begin{itemize}
     \item Verhalten auf Ziele ausrichten \newline
     \pause
-    \item Sich über Wirkung der Emotionen auf eigenes handeln bewusst sein \newline
+    \item Sich über Wirkung der Emotionen auf eigenes Handeln bewusst sein \newline
     \pause
     \item Misserfolge nicht als persönliche Niederlage sehen
     \end{itemize}
@@ -183,31 +184,11 @@
     \begin{itemize}
     \item Sich über den Langfristigen Prozess von Persönlichkeitsentwicklung bewusst sein \newline
     \pause
-    \item Im Umfeld unterstützung für persönlichen Entwicklungsprozess suchen \newline
+    \item Im Umfeld Unterstützung für persönlichen Entwicklungsprozess suchen \newline
     \pause
-    \item Sich eigener Haltung und Muster bewusst sein
+    \item Sich eigener Haltungen und Muster bewusst sein
     \end{itemize}
 \end{frame}
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 
