--- a/zsm/cites.tex
+++ b/zsm/cites.tex
@@ -19,7 +19,7 @@
     
      \beamertemplatearticlebibitems
      \bibitem{Bilder}
-         Bilder
+         Bild:
 %         \newblock Nach erscheinen:
 % 
          \newblock Selbstmanagement-Kompetenz \url{https://s14-eu5.startpage.com/cgi-bin/serveimage?url=https%3A%2F%2Fwww.hrtoday.ch%2Fsites%2Fhrtoday.ch%2Ffiles%2Fmedia%2Farticle%2FGrafik_0.jpg&sp=bb335e7f7add319259c1cc3466d97784<Paste>}
