--- a/zsm/main.tex
+++ b/zsm/main.tex
@@ -16,7 +16,7 @@
 \titlegraphic{\vspace{4cm} \hspace{9cm} \includegraphics[height=2cm]{template/Logo-Uni-Freiburg.png}}
 \graphicspath{ {./template/} {./zsm/} }
 
-\title{Selbstmanagement-Kompetenz in Unternehmen nachhaltig sichern}
+\title{Selbstmanagement-Kompetenz}
 \author{Janika, Maike, Charlotte, Felix}
 
 \newif\ifonline
@@ -67,7 +67,8 @@
 
 \begin{frame}{Inhalt}
     \large
-    \tableofcontents[hidesubsections]
+    \tableofcontents[]
+    % \tableofcontents[hidesubsections]
     % \clearpage
 \end{frame}
 
