shortened link again.
would have wrapped everything in a weird way.

--- a/zsm/cites.tex
+++ b/zsm/cites.tex
@@ -3,7 +3,7 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%CITES%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{frame}[c,fragile,allowframebreaks]{Quellen}
     Die Folien sind zu finden unter: \\
-    \url{https://github.com/fkarg/things-to-talk-about/blob/master/zsm/main.pdf}
+    \url{https://github.com/fkarg/things-to-talk-about/tree/master/zsm}
 
 	\hspace{2cm}
 
