--- a/lesswrong/introduction.tex
+++ b/lesswrong/introduction.tex
@@ -29,30 +29,30 @@
 
 \section{Einführung}
 
-\begin{frame}[standout]
-    Es gibt eine gewisse wertvolle Art zu denken ...
-    % welche nicht in Schulen gelehrt wird. Oder überhaupt irgendwie
-    % systematisch. Manchmal ist sie absorbiert worden, aus Büchern, aus
-    % Artikeln, vorgehensweisen und Denkweisen von anderen Menschen. Meistens
-    % hat diese Art zu Denken etwas mit Wissenschaft zu tun, mit der
-    % Experimentellen Methode. Der teil, bei dem die Realität konfrontiert,
-    % anstatt sich dinge auszudenken. Der teil, bei dem man 'Oops' sagt und
-    % eine Theorie aufgibt wenn sie nicht von Beweisen gestützt wird.
-    % 
-    % Aber diese Art zu Denken ist mehr als das. Tiefer und allgemeiner als
-    % eine Brille, die man wieder auszieht wenn man das Labor verlässt. Sie ist
-    % anwendbar im Täglichen Leben, wenn auch schwieriger und subtiler. Aber
-    % wenn man nicht 'Oops, das geht wohl anders' sagen kann wenn etwas
-    % offensichtlich schief läuft, bliebt keine andere Wahl als sich selbst in
-    % den Fuß zu schießen.
-    % 
-    % Wir alle kennen Jemanden der so handelt. Und irgendwo, auch wenn man
-    % eigentlich nicht daran denken möchte, handelt man ja doch irgendwo
-    % genauso. Es wäre schön wenn es einen anderen Weg gäbe.
-    % 
-    % Den stelle ich euch nun also vor, Ich hoffe ihr nehmt zumindest irgendwas
-    % daraus mit.
-\end{frame}
+% \begin{frame}[standout]
+%     Es gibt eine gewisse wertvolle Art zu denken ...
+%     % welche nicht in Schulen gelehrt wird. Oder überhaupt irgendwie
+%     % systematisch. Manchmal ist sie absorbiert worden, aus Büchern, aus
+%     % Artikeln, vorgehensweisen und Denkweisen von anderen Menschen. Meistens
+%     % hat diese Art zu Denken etwas mit Wissenschaft zu tun, mit der
+%     % Experimentellen Methode. Der teil, bei dem die Realität konfrontiert,
+%     % anstatt sich dinge auszudenken. Der teil, bei dem man 'Oops' sagt und
+%     % eine Theorie aufgibt wenn sie nicht von Beweisen gestützt wird.
+%     % 
+%     % Aber diese Art zu Denken ist mehr als das. Tiefer und allgemeiner als
+%     % eine Brille, die man wieder auszieht wenn man das Labor verlässt. Sie ist
+%     % anwendbar im Täglichen Leben, wenn auch schwieriger und subtiler. Aber
+%     % wenn man nicht 'Oops, das geht wohl anders' sagen kann wenn etwas
+%     % offensichtlich schief läuft, bliebt keine andere Wahl als sich selbst in
+%     % den Fuß zu schießen.
+%     % 
+%     % Wir alle kennen Jemanden der so handelt. Und irgendwo, auch wenn man
+%     % eigentlich nicht daran denken möchte, handelt man ja doch irgendwo
+%     % genauso. Es wäre schön wenn es einen anderen Weg gäbe.
+%     % 
+%     % Den stelle ich euch nun also vor, Ich hoffe ihr nehmt zumindest irgendwas
+%     % daraus mit.
+% \end{frame}
 
 
 \begin{frame}[c]{Beispiel}
@@ -69,7 +69,7 @@
 
 \begin{frame}[c]{Kognitive Vorurteile - Erklärung}
     \pause
-    Beispiel: Ich bin unbeliebt. \newline
+    Beispiel: Ich kann nicht Präsentieren. \newline
     % erzählen: man sieht die welt so wie man sie sehen möchte, sucht
     % hauptsächlich nach bestätigungen und übergeht gegenteiliges
     \newline \pause
