--- a/lesswrong/main.tex
+++ b/lesswrong/main.tex
@@ -19,6 +19,7 @@
 
 \newif\ifEnglish
 \Englishfalse
+% \Englishtrue
 
 \AtBeginSection[]
 {
@@ -78,7 +79,11 @@
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%BEGINNING%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\input{introduction.tex}
+% \input{lesswrong/introduction2.tex}
+\input{introduction2.tex}
+
+% \input{introduction.tex}
+
 % \input{predictably_wrong.tex}
 
 % \input{occam.tex}
