started to reworked

--- a/lesswrong/cites.tex
+++ b/lesswrong/cites.tex
@@ -19,8 +19,9 @@
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%CITES%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{frame}[c,fragile,allowframebreaks]{Quellen}
-    Die Folien sind zu finden unter: \newline \newline
+    Die Folien sind zu finden unter: \newline
     \url{https://github.com/fkarg/things-to-talk-about/tree/master/lesswrong}
+    \newline
     \newline
     Das Forum, mit diesen und sehr viel mehr Themen: \newline
 
