--- a/lesswrong/introduction2.tex
+++ b/lesswrong/introduction2.tex
@@ -24,28 +24,54 @@
     \newline
     \pause
     \pause
-    \item Ziele erreichen       \only<5>{(Instrumental Rationality)}
-    \end{itemize}
+    \item Ziele erreichen       \only<5->{(Instrumental Rationality)}
     \newline
+    \end{itemize}
+    \pause
+    \pause
+    Kurz: Rationalität entwickelt unsere Entscheidungen bezüglich Denken und Handeln weiter.
 \end{frame}
 
 
 \begin{frame}[c]{Was ist Rationalität?}
     \Large
-    Nutzen von Konzepten anderer Bereiche, z.B.:
+    Nutzen von Erkenntnissen aus anderen Bereichen, z.B.:
     \begin{itemize}
     \pause
-    \item Statistik
+    \item Statistik         \only<3->{(Bayes' Theorem)}
     \pause
-    \item Philosophie
     \pause
-    \item Die Wissenschaftliche Methode
+    \item Philosophie       \only<5->{(Effektiver Altruismus)}
     \pause
-    \item Entscheidungstheorie
     \pause
-    \item Kognitionswisschenschaften
+    \item Entscheidungstheorie  \only<7->{(Occams Razor)}
+    \pause
+    \pause
+    \item Kognitionswisschenschaften    \only<9->{(System I/II)}
+    \pause
+    \pause
+    \item Kritisches Denken \only<11->{(Wissenschaftliche Methode)}
     \end{itemize}
 \end{frame}
+
+
+\begin{frame}[c]{Was tun mit den Erkenntnissen?}
+    \Large
+    \pause
+    Optimieren von ...
+    \begin{itemize}
+    \pause
+    \item Strukturen
+    \pause
+    \item Denkprozessen
+    \pause
+    \item Verfahrensprozessen
+    \pause
+    \item ...
+    \end{itemize}
+\end{frame}
+
+
 
 
 
