--- a/lesswrong/occam.tex
+++ b/lesswrong/occam.tex
@@ -13,12 +13,33 @@
 \else
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
+
 \section{Occam's Rasiermesser}
 
 \begin{frame}[c]{Occam's Rasiermesser - Allgemeine Beschreibung}
-    Üblicherweise sinngemäß so: ...
+    \Large
+    'Die einfachste Erklärung für eine Fragestellung.'
 \end{frame}
 
+
+\begin{frame}[c]{Occam's Rasiermesser - Beispiel}
+    \Large
+    Die einfachste Erklärung für \underline{\hspace{2cm}} ist: \\
+    \pause
+    Eine Hexe macht das.
+\end{frame}
+
+
+\begin{frame}[c]{Kolmogorov-Komplexität}
+    \Large
+    \pause
+    Wie viel Code man bräuchte um etwas zu Simulieren.
+\end{frame}
+
+
+\begin{frame}[standout]
+    Informationsgehalt ... \pause ist wichtig.
+\end{frame}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \fi
