--- a/lesswrong/introduction2.tex
+++ b/lesswrong/introduction2.tex
@@ -54,6 +54,7 @@
     \end{itemize}
 \end{frame}
 
+% Wertetheorie, Erkenntnistheorie, Metaphysik
 
 \begin{frame}[c]{Was tun mit den Erkenntnissen?}
     \Large
