--- a/lesswrong/main.tex
+++ b/lesswrong/main.tex
@@ -74,15 +74,23 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%BEGINNING
 % % \input{introduction.tex}
 
-% \input{introduction2.tex} % actual introduction, ~85%
-% \input{decisions.tex}     % few slides with a lot of information to talk about
+%
+% Wenn die Leute aus dem Vortrag herausgehen, sollen sie mitgenommen haben:
+% - bewusstsein schaffen für eigene betroffenheit
+% - interesse schaffen sich daran sich damit auseinanderzusetzen -> 
+% - 
+% Auf jeder Folie etwas vermitteln das nicht auf der Folie steht
+
+
+\input{introduction2.tex} % actual introduction, ~85%
+\input{decisions.tex}     % few slides with a lot of information to talk about
 
 
 % % % \input{predictably_wrong.tex}     % still exists, won't be used.
 
 % \input{bayes.tex}     % not existent yet
 % \input{altruism.tex}  % not existent yet
-% \input{occam.tex}     % in progress ~85%
+\input{occam.tex}     % in progress ~85%
 % \input{fastslow.tex}  % not existent yet
 % \input{critical.tex}  % not existent yet
 
