--- a/lesswrong/occam.tex
+++ b/lesswrong/occam.tex
@@ -33,7 +33,7 @@
 \begin{frame}[c]{Kolmogorov-Komplexität}
     \Large
     \pause
-    Wie viel Code man bräuchte um etwas zu Simulieren.
+    Wie viel Code man bräuchte um etwas zu simulieren.
 \end{frame}
 
 
