--- a/lesswrong/introduction2.tex
+++ b/lesswrong/introduction2.tex
@@ -35,22 +35,22 @@
 
 \begin{frame}[c]{Was ist Rationalität?}
     \Large
-    Nutzen von Erkenntnissen aus anderen Bereichen, z.B.:
+    Nutzen von hilfreichen Erkenntnissen aus anderen Bereichen, z.B.:
     \begin{itemize}
     \pause
-    \item Statistik         \only<3->{(Bayes' Theorem)}
+    \item Bayes' Theorem        \only<3->{(Statistik)}
     \pause
     \pause
-    \item Philosophie       \only<5->{(Effektiver Altruismus)}
+%     \item <Philosophie>       \only<5->{(Philosophie)}
     \pause
     \pause
-    \item Entscheidungstheorie  \only<7->{(Occams Razor)}
+    \item Occams Rasiermesser   \only<7->{(Entscheidungstheorie)}
     \pause
     \pause
-    \item Kognitionswisschenschaften    \only<9->{(System I/II)}
+%     \item Kognitionswisschenschaften    \only<9->{(System I/II)}
     \pause
     \pause
-    \item Kritisches Denken \only<11->{(Wissenschaftliche Methode)}
+%     \item Kritisches Denken \only<11->{(Wissenschaftliche Methode)}
     \end{itemize}
 \end{frame}
 
