--- a/lesswrong/main.tex
+++ b/lesswrong/main.tex
@@ -1,4 +1,4 @@
-\documentclass[18pt,compress,ngerman,utf8,t]{beamer}
+\documentclass[18pt,compress,ngerman,utf8,t,xcolor=table]{beamer}
 \usepackage{etex}
 \usepackage[ngerman]{babel}
 \usepackage{graphicx}
@@ -82,16 +82,14 @@
 % Auf jeder Folie etwas vermitteln das nicht auf der Folie steht
 
 
-\input{introduction2.tex} % actual introduction, ~85%
-\input{decisions.tex}     % few slides with a lot of information to talk about
+% \input{introduction2.tex} % actual introduction, ~85%
+% \input{decisions.tex}     % few slides with a lot of information to talk about
 
 
 % % % \input{predictably_wrong.tex}     % still exists, won't be used.
 
 % \input{bayes.tex}     % not existent yet
-% \input{altruism.tex}  % not existent yet
-\input{occam.tex}     % in progress ~85%
-% \input{fastslow.tex}  % not existent yet
+% \input{occam.tex}     % in progress ~85%
 % \input{critical.tex}  % not existent yet
 
 
