--- a/lesswrong/decisions.tex
+++ b/lesswrong/decisions.tex
@@ -19,7 +19,6 @@
 
 \begin{frame}[c]{Kaufen eines neuen Handys}
     \includegraphics[width=\textwidth]{Sammeln_Informationen} \\
-    \pause
     Hier müssen wir vor allem aufpassen bezüglich:
     \begin{itemize}[<+(1)->]
         \item Verzerrungen der Verfügbarkeit
@@ -36,8 +35,7 @@
 
 
 \begin{frame}[c]{Kaufen eines neuen Handys}
-    \includegraphics[width=\textwidth]{Informations_Verarbeitung} \\
-    \pause
+    \includegraphics[width=\textwidth]{Informations_Verarbeitung0} \\
     Hier müssen wir vor allem aufpassen bezüglich:
     \begin{itemize}[<+(1)->]
         \item Repräsentativität
@@ -50,8 +48,7 @@
 
 
 \begin{frame}[c]{Kaufen eines neuen Handys}
-    \includegraphics[width=\textwidth]{Entscheidung} \\
-    \pause
+    \includegraphics[width=\textwidth]{Entscheidung0} \\
     Hier müssen wir vor allem aufpassen bezüglich:
     \begin{itemize}[<+(1)->]
         \item Schubladendenken (Mental Accounting Bias)
@@ -64,8 +61,7 @@
 
 
 \begin{frame}[c]{Kaufen eines neuen Handys}
-    \includegraphics[width=\textwidth]{Bewertung} \\
-    \pause
+    \includegraphics[width=\textwidth]{Bewertung0} \\
     Hier müssen wir vor allem aufpassen bezüglich:
     \begin{itemize}[<+(1)->]
         \item Rückschaufehler (Hindsight)
