--- a/lesswrong/main.tex
+++ b/lesswrong/main.tex
@@ -83,7 +83,7 @@
 
 
 % \input{introduction2.tex} % actual introduction, ~85%
-% \input{decisions.tex}     % few slides with a lot of information to talk about
+\input{decisions.tex}     % few slides with a lot of information to talk about
 
 
 % % % \input{predictably_wrong.tex}     % still exists, won't be used.
