--- a/lesswrong/main.tex
+++ b/lesswrong/main.tex
@@ -97,7 +97,13 @@
 % \input{cites.tex}
 
 
-% generally don't forget: after 20min of talk, 5min short recap + exercise.
+
+% Modelle/Modelltheorie
+% relativ theoretisch aber nicht abgehoben
+% notwendigerweise vereinfachung
+
+% noticing confusion-bsp:
+% 
 
 
 
